<resources>
    <string name="app_name">Step Counter</string>
    <string name="info_name">Step Counter - Info</string>
    <string name="start_algorithms">Start Algorithms</string>
    <string name="stop_algorithms">Stop Algorithms</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="recordModeLabel">Record Sensor Data</string>
    <string name="stepCountModeLabel">Count Steps</string>
    <string name="action_info">Info</string>
    <string name="action_supported_sensors">Sensors</string>
    <string name="supported_sensors">Sensors Supported On This Device</string>
    <string name="gathering">Gathering data for supported sensors...</string>
    <string name="enter_email">Enter email</string>
    <string name="email">Email</string>
    <string name="name_here">Email file name</string>
    <string name="movementDetectedText">Movement Detected</string>
    <string name="selectSensorSectionHeading">Select Sensor</string>
    <string name="accelerometerLabel">Accelerometer</string>
    <string name="linearAccelerationSensorLabel">Linear Acceleration</string>
    <string name="optionsSectionHeading">Options</string>
    <string name="enableHighPassFilterLabel">Enable High-Pass Filter</string>
    <string name="enableLowPassFilterLabel">Enable Low-Pass Filter</string>
    <string name="readingAccelerationData">Reading Acceleration Data</string>
    <string name="startReadingAccelerationData">Start Reading Sensor</string>
    <string name="plotDataSelectorHeading">Toggle Plotted Data</string>
    <string name="shouldPlotAccelDataLabel">Acceleration</string>
    <string name="shouldPlotXDataLabel">X - Data</string>
    <string name="shouldPlotYDataLabel">Y - Data</string>
    <string name="shouldPlotZDataLabel">Z - Data</string>

    <!-- Algorithm View -->
    <string name="algorithm_x">X</string>
    <string name="algorithm_y">Y</string>
    <string name="algorithm_z">Z</string>
    <string name="zero">0</string>
    <string name="steps">Steps</string>
    <string name="edward_algorithm">Edward Algorithm</string>
    <string name="kornel_algorithm">Kornel Algorithm</string>
    <string name="dino_algorithm">Dino Algorithm</string>
    <string name="chris_algorithm">Chris Algorithm</string>
    <string name="refresh">Refresh</string>

    <!-- Result View -->
    <string name="name">Author:</string>
    <string name="mode">Mode:</string>
    <string name="orientation">Orientation:</string>
    <string name="algorithm">Algorithm:</string>
    <string name="real_steps">Real Steps:</string>
    <string name="counted_steps">Counted Steps:</string>
    <string name="placeholder">Empty</string>
    <string name="number_placeholder">1</string>
    <string name="loading">RUNNING ALGORITHMS!</string>

    <!-- Info Fragment -->
    <string name="created_by">This application and the algorithms implemented for counting steps were created by:</string>
    <string name="edward">&#8226; Edward McNealy</string>
    <string name="dino">&#8226; Dino Mijatovic</string>
    <string name="kornel">&#8226; Kornel Kotan</string>
    <string name="chris">&#8226; Chris Sheehan</string>
</resources>
