<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sheehan.chris.accelerometer.DetermineMovementActivity">

    <TextView
        android:id="@+id/sensorSelectorLabel"
        style="@style/apptext"
        android:layout_alignParentTop="true"
        android:text="@string/selectSensorSectionHeading">
    </TextView>

    <RadioGroup
        android:id="@+id/sensorSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/highPassFilterCheckBox"
        android:layout_below="@id/sensorSelectorLabel">

        <RadioButton
            android:id="@+id/accelerometer"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onSensorSelectorClick"
            android:text="@string/accelerometerLabel"/>

        <RadioButton
            android:id="@+id/linearAcceleration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onSensorSelectorClick"
            android:text="@string/linearAccelerationSensorLabel"/>

    </RadioGroup>

    <TextView
        android:id="@+id/optionsLabel"
        style="@style/apptext"
        android:layout_alignBottom="@+id/zDataPlotCheckBox"
        android:layout_alignParentStart="true"
        android:text="@string/optionsSectionHeading"/>


    <CheckBox
        android:id="@+id/highPassFilterCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/readAccelerationDataToggleButton"
        android:layout_alignParentStart="true"
        android:checked="@bool/useHighPassFilterDefaultValue"
        android:onClick="onHighPassFilterCheckBoxClicked"
        android:text="@string/enableHighPassFilterLabel"/>

    <ToggleButton
        android:id="@+id/readAccelerationDataToggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/accelDataPlotCheckBox"
        android:layout_marginTop="27dp"
        android:checked="false"
        android:onClick="onReadAccelerationDataToggleButtonClicked"
        android:textOff="@string/startReadingAccelerationData"
        android:textOn="@string/readingAccelerationData"/>

    <com.androidplot.xy.XYPlot
        android:id="@+id/XYPlot"
        title="Acceleration Plot"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignEnd="@+id/readAccelerationDataToggleButton"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/readAccelerationDataToggleButton">
    </com.androidplot.xy.XYPlot>


    <TextView
        android:id="@+id/plotDataSelectorLabel"
        style="@style/apptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/sensorSelectorLabel"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="26dp"
        android:text="@string/plotDataSelectorHeading"/>

    <CheckBox
        android:id="@+id/xDataPlotCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/sensorSelectorLabel"
        android:layout_alignStart="@+id/plotDataSelectorLabel"
        android:layout_alignTop="@+id/sensorSelector"
        android:checked="true"
        android:onClick="onPlotXCheckBoxClicked"
        android:text="@string/shouldPlotXDataLabel"/>

    <CheckBox
        android:id="@+id/yDataPlotCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/xDataPlotCheckBox"
        android:layout_below="@+id/xDataPlotCheckBox"
        android:checked="true"
        android:onClick="onPlotYCheckBoxClicked"
        android:text="@string/shouldPlotYDataLabel"/>

    <CheckBox
        android:id="@+id/zDataPlotCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/yDataPlotCheckBox"
        android:layout_below="@+id/yDataPlotCheckBox"
        android:checked="true"
        android:onClick="onPlotZCheckBoxClicked"
        android:text="@string/shouldPlotZDataLabel"/>

    <CheckBox
        android:id="@+id/accelDataPlotCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/zDataPlotCheckBox"
        android:layout_below="@+id/zDataPlotCheckBox"
        android:checked="true"
        android:onClick="onPlotAccelCheckBoxClicked"
        android:text="@string/shouldPlotAccelDataLabel"/>

    <Space
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_above="@+id/yDataPlotCheckBox"
        android:layout_below="@+id/zDataPlotCheckBox"/>

</RelativeLayout>
