<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:paddingTop="14dp"
        android:text="@string/gathering"
        android:textAllCaps="true"
        android:textSize="14dp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:imeOptions="actionDone"
        android:layout_marginTop="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="18dp"
        android:paddingLeft="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emails"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_send_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:text="@string/email"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="50dp"
        android:background="#111" />

    <TextView
        android:id="@+id/supported"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="18dp"
        android:text="@string/supported_sensors"
        android:textAllCaps="true"
        android:textSize="16dp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/sensors"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:nestedScrollingEnabled="true"
        android:transcriptMode="disabled" />

</LinearLayout>