<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:paddingLeft="2dp"
                android:paddingRight="5dp"
                android:paddingTop="2dp"
                android:textStyle="bold"
                android:text="@string/placeholder"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/mode"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:paddingLeft="2dp"
                android:paddingRight="5dp"
                android:paddingTop="2dp"
                android:text="@string/placeholder"
                android:textSize="12dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/orientation"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_orientation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:paddingLeft="2dp"
                android:paddingRight="5dp"
                android:paddingTop="2dp"
                android:text="@string/placeholder"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/steps"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:paddingLeft="2dp"
                android:paddingRight="5dp"
                android:paddingTop="2dp"
                android:text="@string/placeholder"
                android:textSize="12dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>